# EasyMinecraftDeploy

./: .gitignore  CMakeLists.txt  README.md
res/: res.rc
src/: common.cpp  common.h  common.hpp  config.cpp  config.h  config.hpp  console.cpp  console.hpp  main.cpp  setup.cpp  setup.h  setup.hpp
